[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/delete.png" type="Texture" id=1]
[ext_resource path="res://ui/organizer/Organizer.gd" type="Script" id=2]
[ext_resource path="res://ui/organizer/OrganizerDeleteTarget.gd" type="Script" id=3]

[node name="Organizer" type="PanelContainer"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 293.0
margin_bottom = 293.0

[node name="ToolContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 286.0
margin_bottom = 20.0

[node name="NewFolderButton" type="Button" parent="VBoxContainer/ToolContainer"]
margin_right = 84.0
margin_bottom = 20.0
hint_tooltip = "Create a new folder for organizational purposes"
text = "New Folder"

[node name="DeleteTarget" type="TextureRect" parent="VBoxContainer/ToolContainer"]
margin_left = 266.0
margin_right = 286.0
margin_bottom = 20.0
hint_tooltip = "Drag entries and folders here to delete"
size_flags_horizontal = 10
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 286.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="EntryContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 286.0
margin_bottom = 262.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DragIndicator" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="DragIndicator"]
margin_left = 7.0
margin_right = 230.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/ToolContainer/NewFolderButton" to="." method="_on_NewFolderButton_pressed"]
[connection signal="mouse_exited" from="VBoxContainer/ToolContainer/DeleteTarget" to="VBoxContainer/ToolContainer/DeleteTarget" method="_on_DeleteTarget_mouse_exited"]
